tests/rosetta/out/Smalltalk/averages-median-2.out
/tmp/averages-median-2.st:5: parse error, expected ']'
